--- a/src/style/grid.less
+++ b/src/style/grid.less
@@ -331,12 +331,10 @@
 		}
 		.@{item}
 		{
+			position: relative;
 			flex: 1 1 0px;
 			min-width: initial;
 			width: auto !important;
-			position: relative;
-			overflow: hidden;
-			text-overflow: ellipsis;
 
 			&.@{item}--tight
 			{
